# caster

./: .gitignore  Cargo.toml  Caster.example.toml  rustfmt.toml
src/: config.rs  event.rs  main.rs  test.rs  utils.rs
src/casters/: crates.rs  feed.rs  mod.rs
src/consumers/: mod.rs  telegram.rs
