[package]
name = "caster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1.15.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
reqwest           = { version = "0.11.8", features = ["tokio-native-tls", "json"] }
color-eyre        = { version = "0.5.11", default-features = false }
serde             = { version = "1.0.133", features = ["derive"] }
figment           = { version = "0.10.6", features = ["toml", "env"] }
feed-rs           = { version = "1.0.0" }
telegram-bot-raw  = { version = "0.8.0" }
log               = "0.4.14"
mod_use           = "0.2.0"
pretty_env_logger = "0.4.0"
sled              = "0.34.7"
once_cell         = "1.9.0"
futures           = "0.3.19"
humantime         = "2.1.0"
html2text         = "0.2.1"
html-escape       = "0.2.9"

[features]


